feat: add pagination, add form validation and snackbars for notification when interval successfully created
